--- a/recipes/nachos.html
+++ b/recipes/nachos.html
@@ -6,5 +6,25 @@
 </head>
 <body>
   <h1>How to Make Delicious Nachos!</h1>
+  <img src="../images/nachos.jpg">
+
+  <h2>Ingredients:</h2>
+  <ul>
+    <li>Tortilla chips</li>
+    <li>Chicken mince</li>
+    <li>Spice mix</li>
+    <li>Guacamole</li>
+    <li>Sour cream</li>
+    <li>Cheese</li>
+  </ul>
+
+  <h2>Steps:</h2>
+  <ol>
+    <li>Cook chicken mince with the spice mix.</li>
+    <li>Lay out the chips on a plate and cover with cheese.</li>
+    <li>Put the cooked mince on top of the chips so that the cheese melts.</li>
+    <li>Top with sour cream and then guacamole.</li>
+    <li>Enjoy!</li>
+  </ol>
 </body>
 </html>
